--- a/main.css
+++ b/main.css
@@ -1,9 +1,15 @@
 /* bodyの内容 */
+body{
+    background: radial-gradient(ellipse at center,black,rgb(4, 44, 4),rgb(84, 139, 84));
+}
+
 /* headerの内容*/
 header{
+    width: 100%;
     height: 100px;
     color:orange;
-    background-color: black;
+    background-color:rgba(0,0,0,0.6);
+    border: 1px solid;
 }
 .header-logo{
     font: size 40px;
@@ -12,38 +18,55 @@ header{
 }
 .header-list{
     float: right;
-    list-style:none;
+    list-style: none;
 }
 .header-list li{
     margin-top:30px;
     margin-right:20px;
-    float:left;
+    float: left;
 }
 /*mainの内容*/
-.asi-area{
-    clear:both;
-    height:400px;
-    background-color: aqua;
+main{
+    clear: both;
+    color: aquamarine;
 }
+
+.asi-area{
+    height:350px;
+}
+
+.asi-area h3{
+    padding: 12px;
+    border: 3px solid;
+}
+
 .asi-block{
     margin-left:20px;
     float:left;
+    border: 1px solid;
 }
 
 .asi-block img{
     width:200px;
     height:200px;
     border: 5px solid black;
+    transition: all 1s;
+}
+
+.asi-block img:hover{
+    opacity: 0.7;
 }
 
 .asi-block p{
-    font-family:impact;
+    font-family: impact;
+    text-align: center;
+    border: 1px solid;
 }
 
 .other-area{
-    clear:both;
+    clear: both;
 }
 .other-block{
     margin-left:20px;
-    float:left;
+    float: left;
 }
