--- a/main.css
+++ b/main.css
@@ -1,15 +1,17 @@
 /* bodyの内容 */
 body{
-    background: radial-gradient(ellipse at center,black,rgb(4, 44, 4),rgb(84, 139, 84));
+    background: radial-gradient(ellipse at center,black,rgb(4, 44, 41),rgb(45, 75, 69));
 }
 
 /* headerの内容*/
 header{
     width: 100%;
-    height: 100px;
-    color:orange;
-    background-color:rgba(0,0,0,0.6);
-    border: 1px solid;
+    height: 90px;
+    color:aquamarine;
+    border: 3px solid;
+}
+header span{
+    font-size: 20px;
 }
 .header-logo{
     font: size 40px;
@@ -21,7 +23,7 @@ header{
     list-style: none;
 }
 .header-list li{
-    margin-top:30px;
+    margin-top:25px;
     margin-right:20px;
     float: left;
 }
@@ -29,44 +31,57 @@ header{
 main{
     clear: both;
     color: aquamarine;
+    padding-left: 20px;
 }
 
-.asi-area{
-    height:350px;
+main span{
+    font-size: small;
 }
 
-.asi-area h3{
+main h3{
+    width: 70%;
     padding: 12px;
     border: 3px solid;
 }
 
-.asi-block{
-    margin-left:20px;
-    float:left;
-    border: 1px solid;
-}
-
-.asi-block img{
-    width:200px;
-    height:200px;
-    border: 5px solid black;
-    transition: all 1s;
-}
-
-.asi-block img:hover{
-    opacity: 0.7;
-}
-
-.asi-block p{
-    font-family: impact;
-    text-align: center;
-    border: 1px solid;
+.asi-area{
+    height:300px;
 }
 
 .other-area{
     clear: both;
 }
-.other-block{
+
+.contents-block{
     margin-left:20px;
-    float: left;
+    float:left;
+    border: 1px solid;
+    position: relative;
+}
+
+.contents-block img{
+    width:200px;
+    height:200px;
+    transition: all 1s;
+}
+
+.contents-block img:hover{
+    opacity: 0.7;
+}
+
+.contents-block p{
+    display: block;
+    position: absolute;
+    bottom: 167px;
+    text-align: center;
+    width: 100%;
+    border: 1px solid;
+    background-color: rgba(0,0,0,0.9);
+}
+
+/*contents-blockの第二クラス*/
+.asi{
+}
+
+.other{
 }
