--- a/main.css
+++ b/main.css
@@ -5,83 +5,84 @@ body{
 
 /* headerの内容*/
 header{
-    width: 100%;
-    height: 90px;
-    color:aquamarine;
     border: 3px solid;
+    color:aquamarine;
+    height: 90px;
+    width: 100%;
 }
 header span{
     font-size: 20px;
 }
 .header-logo{
+    float:left;
     font: size 40px;
     margin:20px 40px;
-    float:left;
 }
 .header-list{
     float: right;
     list-style: none;
 }
 .header-list li{
+    float: left;
     margin-top:25px;
     margin-right:20px;
-    float: left;
 }
+
 /*mainの内容*/
 main{
-    clear: both;
     color: aquamarine;
     padding-left: 20px;
 }
-
+main h2{
+    clear: both;
+}
 main span{
     font-size: small;
 }
-
 main h3{
-    width: 70%;
-    padding: 12px;
     border: 3px solid;
+    padding: 12px;
+    width: 70%;
 }
-
 .asi-area{
     height:300px;
 }
-
 .other-area{
     clear: both;
+    height: 300px;
 }
-
 .contents-block{
-    margin-left:20px;
-    float:left;
     border: 1px solid;
-    position: relative;
-}
-
-.contents-block img{
-    width:200px;
+    float:left;
     height:200px;
-    transition: all 1s;
+    margin-left:20px;
+    position: relative;
+    width:200px;
 }
-
+.contents-block img{
+    height: 100%;
+    transition: all 1s;
+    width: 100%;
+}
 .contents-block img:hover{
     opacity: 0.7;
 }
-
 .contents-block p{
+    background-color: rgba(0,0,0,0.9);
+    border: 1px solid;
+    bottom: 160px;
     display: block;
+    height: 22px;
     position: absolute;
-    bottom: 167px;
     text-align: center;
     width: 100%;
-    border: 1px solid;
-    background-color: rgba(0,0,0,0.9);
 }
 
 /*contents-blockの第二クラス*/
 .asi{
+    background-color: aquamarine;
 }
-
 .other{
+    background-color: aquamarine;
 }
+/*-------------------------*/
