winch 数値計算プログラム完成(12/04)

--- a/winch.css
+++ b/winch.css
@@ -45,18 +45,19 @@ main{
     justify-content: center;
     align-items: flex-start;
     margin-left: 20px;
+    width:460px;
 }
 .data{
     margin: 10px;
     display: flex;
-    width: 450px;
+    width: 100%;
     height: 25px;
 }
 .name{
     margin: 0;
     width: 60%;
 }
-.inputBox{
+.input-Box{
     margin-right: 5px;
     color: aquamarine;
     background-color: black;
@@ -68,4 +69,32 @@ main{
 .unit{
     margin: 0;
     width: 10%;
+}
+.cal-button{
+    color: aquamarine;
+    background-color: black;
+    border: 1px solid;
+    width: 160px;
+    margin: 5px auto; 
+}
+.cal-button:hover{
+    color: red;
+}
+.output-collection{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    margin-left: 20px;
+    width: 460px;
+}
+.output-Box{
+    margin: 0px 5px 0px 0px;
+    padding-right: 15px;
+    color: aquamarine;
+    background-color: black;
+    border: 2px solid;
+    border-radius: 5px;
+    text-align: right;
+    width: 28%;
 }
