--- a/mechanum.css
+++ b/mechanum.css
@@ -39,12 +39,14 @@ main{
     float: left;
 }
 .input-collection{
+    position:absolute;
+    top: 100px;
+    left: 600px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    margin-left: 20px;
-    width:460px;
+    width:500px;
+    background-color: rgba(0, 0, 0, 0.1);
+    padding: 20px;
 }
 .data{
     margin: 10px;
@@ -54,7 +56,7 @@ main{
 }
 .name{
     margin: 0;
-    width: 65%;
+    width: 300px;
 }
 .input-Box{
     margin-right: 5px;
@@ -63,16 +65,31 @@ main{
     border-color: aquamarine;
     border-radius: 5px;
     text-align: right;
-    width: 30%;
+    width: 100px;
 }
 .unit{
     margin: 0;
-    width: 18%;
     color: aquamarine;
     background-color: black;
     border: 1px solid;
     border-color: aquamarine;
 }
+/*unitの第二クラス*/
+.nor{
+    width: 80px;
+}
+.sp1{
+    width: 83px;
+}
+.sp2{
+    width: 68px;
+}
+
+
+.width{
+    display: none;
+}
+
 .cal-button{
     color: aquamarine;
     background-color: black;
@@ -87,14 +104,19 @@ main{
     color: black;
     background-color: red;
 }
+
 .output-collection{
+    position:absolute;
+    top: 650px;
+    left: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
     margin-left: 20px;
-    width: 460px;
+    width: 400px;
 }
+
 .output-Box{
     margin: 0px 5px 0px 0px;
     padding-right: 15px;
@@ -103,10 +125,13 @@ main{
     border: 2px solid;
     border-radius: 5px;
     text-align: right;
-    width: 28%;
+    width: 100px;
 }
 
 table{
+    position: absolute;
+    top: 650px;
+    left: 550px;
     border: 1px solid;
 }
 
