--- a/mechanum.css
+++ b/mechanum.css
@@ -41,7 +41,7 @@ main{
 .input-collection{
     position:absolute;
     top: 100px;
-    left: 600px;
+    left: 500px; /*位置調整*/
     display: flex;
     flex-direction: column;
     width:500px;
@@ -106,6 +106,7 @@ main{
 }
 
 .output-collection{
+    background-color: rgba(0, 0, 0, 0.1);
     position:absolute;
     top: 650px;
     left: 20px;
@@ -131,7 +132,7 @@ main{
 table{
     position: absolute;
     top: 650px;
-    left: 550px;
+    left: 500px;
     border: 1px solid;
 }
 
@@ -142,5 +143,5 @@ table{
 
 th, td{
     border: 1px solid;
-    width: 100px;
+    width: 90px;
 }
