--- a/main.css
+++ b/main.css
@@ -46,17 +46,16 @@ main h3{
     width: 70%;
 }
 .asi-area{
-    height:300px;
+    height:320px;
 }
 .other-area{
     clear: both;
     height: 300px;
 }
 .contents-block{
-    border: 1px solid;
     float:left;
     height:200px;
-    margin-left:20px;
+    margin:10px 10px;
     position: relative;
     width:200px;
 }
@@ -87,7 +86,7 @@ main h3{
 .contents-block p{
     background-color: rgba(0,0,0,0.9);
     border: 1px solid;
-    bottom: 160px;
+    bottom: 180px;
     display: block;
     height: 22px;
     position: absolute;
@@ -97,7 +96,7 @@ main h3{
 
 /*contents-blockの第二クラス*/
 .asi{
-    background-color: aquamarine;
+    
 }
 .other{
     background-color: aquamarine;
