--- a/main.css
+++ b/main.css
@@ -74,7 +74,7 @@ main h3{
     background-size: cover;
 }
 .omni3{
-    background-image: url(image/ステアリングアイコンムーブ.gif);
+    background-image: url(image/オムニ3アイコンムーブ.gif);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -86,7 +86,7 @@ main h3{
 
 .contents-block img{
     height: 100%;
-    transition: all 1s;
+    transition: all 1.5s;
     width: 100%;
     background-color: black;
 }
