4輪オムニgif追加

--- a/main.css
+++ b/main.css
@@ -79,7 +79,7 @@ main h3{
     background-size: cover;
 }
 .omni4{
-    background-image: url(image/ステアリングアイコンムーブ.gif);
+    background-image: url(image/オムニ4アイコンムーブ.gif);
     background-repeat: no-repeat;
     background-size: cover;
 }
